--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "merlin",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "morgan": "^1.8.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/GitMerlin/expressTest.git"
   }
 }
